--- a/Core/Translation/cs_CZ.json
+++ b/Core/Translation/cs_CZ.json
@@ -1610,9 +1610,10 @@
     "update-supplier-prices": "Actualizar precios de proveedores",
     "update-time": "Hora de actualización",
     "updated-model": "Actualizado %model% (%key%) %desc%",
+    "updated-records": "Bylo aktualizováno %updatedRecords% záznamů z %totalRecords%",
     "updater": "Actualizador",
     "updates-available": "Dostupné aktualizace",
-    "updates-available-p": "Jsou k dispozici aktualizace pro FacturaScripts. Prosím, klikněte na aktualizátor a stáhněte si novou verzi. Aktualizace opravují chyby a přidávají nové funkce.",
+    "updates-available-p": "Jsou k dispozici aktualizace pro FacturaScripts. Prosím, klikněte na aktuátor a stáhněte si novou verzi. Aktualizace opravují chyby a přidávají nové funkce.",
     "updating-attached-relations": "Aktualizace připojených vazeb",
     "upload-file": "Subir archivo",
     "uploaded-at": "Cargado en",
