--- a/Core/Translation/eu_ES.json
+++ b/Core/Translation/eu_ES.json
@@ -1523,7 +1523,7 @@
     "tax-transport": "Garraioaren zergak",
     "taxes": "Zergak",
     "telemetry-data-to-send": "Erregistratutako instalazioek aldizka FacturaScripts-en bertsio, PHP, herrialdea, hizkuntza eta plugin zerrenden berri ematen dute.",
-    "telephone-prefix": "Telefono aurretikoa",
+    "telephone-prefix": "Telefono aurrizkia",
     "template": "Txantiloi",
     "template-error": "Txantiloi errorea",
     "template-not-found": "Ez da txantiloia aurkitu",
@@ -1610,6 +1610,7 @@
     "update-supplier-prices": "Hornitzaileen prezioak eguneratu",
     "update-time": "Eguneratze ordua",
     "updated-model": "%model% (%key%) %desc% Eguneratua",
+    "updated-records": "%updatedRecords% erregistro eguneratuak %totalRecords%-n",
     "updater": "Eguneratzailea",
     "updates-available": "Eguneratzeak eskuragarri",
     "updates-available-p": "FacturaScripts-en eguneratzeak eskuragarri daude. Mesedez, egin klik eguneratzaileetan eta deskargatu bertsio berria. Eguneratzeek akatsak zuzentzen dituzte eta funtzio berriak gehitzen dituzte.",
