--- a/Core/Translation/pt_PT.json
+++ b/Core/Translation/pt_PT.json
@@ -1610,6 +1610,7 @@
     "update-supplier-prices": "Atualizar preços dos fornecedores",
     "update-time": "Hora de atualização",
     "updated-model": "Atualizado %model% (%key%) %desc%",
+    "updated-records": "Registos atualizados %updatedRecords% de %totalRecords%",
     "updater": "Atualizador",
     "updates-available": "Atualizações disponíveis",
     "updates-available-p": "Há atualizações disponíveis para o FacturaScripts. Por favor, clique no atualizador e faça o download da nova versão. As atualizações corrigem falhas e adicionam novas funcionalidades.",
