--- a/Core/Translation/cs_CZ.json
+++ b/Core/Translation/cs_CZ.json
@@ -1661,6 +1661,7 @@
     "warehouses": "Almacenes",
     "warning": "Atención",
     "warnings": "Avisos",
+    "weak-password": "Heslo musí obsahovat alespoň 8 znaků, čísla a písmena.",
     "web": "Web",
     "website": "Web",
     "wednesday": "Miércoles",
