--- a/Core/Translation/en_EN.json
+++ b/Core/Translation/en_EN.json
@@ -1661,6 +1661,7 @@
     "warehouses": "Warehouses",
     "warning": "Attention",
     "warnings": "Warnings",
+    "weak-password": "La contraseña debe tener al menos 8 caracteres, con números y letras.",
     "web": "Web",
     "website": "Website",
     "wednesday": "Wednesday",
