--- a/Core/Translation/gl_ES.json
+++ b/Core/Translation/gl_ES.json
@@ -1661,6 +1661,7 @@
     "warehouses": "Almacéns",
     "warning": "Atención",
     "warnings": "Avisos",
+    "weak-password": "A contrasinal debe ter ao menos 8 caracteres, con números e letras.",
     "web": "Web",
     "website": "Sitio web",
     "wednesday": "Mércores",
