--- a/Core/Translation/pl_PL.json
+++ b/Core/Translation/pl_PL.json
@@ -1661,6 +1661,7 @@
     "warehouses": "Magazyny",
     "warning": "Uwaga",
     "warnings": "Ostrzeżenia",
+    "weak-password": "La contraseña debe tener al menos 8 caracteres, con números y letras.",
     "web": "Strona internetowa",
     "website": "Strona internetowa",
     "wednesday": "Środa",
