--- a/Core/Translation/es_EC.json
+++ b/Core/Translation/es_EC.json
@@ -1661,6 +1661,7 @@
     "warehouses": "Almacenes",
     "warning": "Atención",
     "warnings": "Avisos",
+    "weak-password": "La contraseña debe tener al menos 8 caracteres, con números y letras.",
     "web": "Web",
     "website": "Web",
     "wednesday": "Miércoles",
