--- a/Core/Translation/eu_ES.json
+++ b/Core/Translation/eu_ES.json
@@ -1661,6 +1661,7 @@
     "warehouses": "Biltegiak",
     "warning": "Erne",
     "warnings": "Oharrak",
+    "weak-password": "La contraseña debe tener al menos 8 caracteres, con números y letras.",
     "web": "Web",
     "website": "Webgunea",
     "wednesday": "Asteazkena",
