--- a/Core/Translation/pt_BR.json
+++ b/Core/Translation/pt_BR.json
@@ -1661,6 +1661,7 @@
     "warehouses": "Armazéns",
     "warning": "<b>Atenção<\/b>",
     "warnings": "Avisos",
+    "weak-password": "La contraseña debe tener al menos 8 caracteres, con números y letras.",
     "web": "Web",
     "website": "Website",
     "wednesday": "quarta-feira",
