--- a/Core/Translation/va_ES.json
+++ b/Core/Translation/va_ES.json
@@ -1661,6 +1661,7 @@
     "warehouses": "Almagasens",
     "warning": "Atenció",
     "warnings": "Advertiments",
+    "weak-password": "La contraseña debe tener al menos 8 caracteres, con números y letras.",
     "web": "Web",
     "website": "Lloc web",
     "wednesday": "wednesday",
