Añadidos mensajes de auditoría al cambiar el iban de una cuenta bancaria de la empresa o de un proveedor.

--- a/Core/Translation/en_EN.json
+++ b/Core/Translation/en_EN.json
@@ -280,6 +280,7 @@
     "companies": "Companies",
     "company": "Company",
     "company-commission-info": "It will only apply to the selected company",
+    "company-iban-changed": "Se ha cambiado el iban de la cuenta bancaria %account%. Antes era %old% y ahora es %new%",
     "company-manager": "Company manager",
     "company-name": "Company name",
     "company-tax": "Corporate income tax",
@@ -1486,6 +1487,7 @@
     "supplier-estimation": "Supplier estimation",
     "supplier-estimations": "Supplier estimations",
     "supplier-have-no-iban": "The supplier %%supplier has no IBAN (bank account)",
+    "supplier-iban-changed": "Se ha cambiado el iban de la cuenta bancaria del proveedor %codproveedor%. Antes era %old% y ahora es %new%",
     "supplier-invoice": "Supplier invoice",
     "supplier-invoice-deleted-successfully": "Purchase invoice %docCode% deleted successfully.",
     "supplier-invoices": "Supplier invoices",
