--- a/Core/Translation/eu_ES.json
+++ b/Core/Translation/eu_ES.json
@@ -280,6 +280,7 @@
     "companies": "Enpresak",
     "company": "Enpresa",
     "company-commission-info": "Aukeratutako enpresari bakarrik aplikatuko zaio",
+    "company-iban-changed": "Se ha cambiado el iban de la cuenta bancaria %account%. Antes era %old% y ahora es %new%",
     "company-manager": "Enpresa kudeatzailea",
     "company-name": "Enpresaren izena",
     "company-tax": "Sozialen gaineko zerga",
@@ -1486,6 +1487,7 @@
     "supplier-estimation": "Hornitzaile aurrekontua",
     "supplier-estimations": "Hornitzaileen aurrekontuak",
     "supplier-have-no-iban": "Hornitzaileak %%iban-kontu bankurik ez du",
+    "supplier-iban-changed": "Se ha cambiado el iban de la cuenta bancaria del proveedor %codproveedor%. Antes era %old% y ahora es %new%",
     "supplier-invoice": "Hornitzaile faktura",
     "supplier-invoice-deleted-successfully": "%docCode% erosketa faktura ondo ezabatu da.",
     "supplier-invoices": "Hornitzaileen fakturak",
