--- a/Core/Translation/fr_FR.json
+++ b/Core/Translation/fr_FR.json
@@ -280,6 +280,7 @@
     "companies": "Entreprises",
     "company": "Compagnie",
     "company-commission-info": "Cela s'appliquera uniquement à l'entreprise sélectionnée",
+    "company-iban-changed": "Se ha cambiado el iban de la cuenta bancaria %account%. Antes era %old% y ahora es %new%",
     "company-manager": "Chef d'entreprise",
     "company-name": "Nom de la compagnie",
     "company-tax": "Fiscalité des entreprises",
@@ -1486,6 +1487,7 @@
     "supplier-estimation": "Devis fournisseur",
     "supplier-estimations": "Budgets des fournisseurs",
     "supplier-have-no-iban": "Le fournisseur %supplier% n'a pas d'IBAN (compte bancaire)",
+    "supplier-iban-changed": "Se ha cambiado el iban de la cuenta bancaria del proveedor %codproveedor%. Antes era %old% y ahora es %new%",
     "supplier-invoice": "Facture fournisseur",
     "supplier-invoice-deleted-successfully": "La facture d'achat %docCode% a été supprimée avec succès.",
     "supplier-invoices": "Factures fournisseurs",
