--- a/Core/Translation/it_IT.json
+++ b/Core/Translation/it_IT.json
@@ -280,6 +280,7 @@
     "companies": "Aziende",
     "company": "Azienda",
     "company-commission-info": "Si applicherà solo all'azienda selezionata",
+    "company-iban-changed": "Se ha cambiado el iban de la cuenta bancaria %account%. Antes era %old% y ahora es %new%",
     "company-manager": "Direttore aziendale",
     "company-name": "Nome della ditta",
     "company-tax": "Imposta sulle società",
@@ -1486,6 +1487,7 @@
     "supplier-estimation": "Stima fornitore",
     "supplier-estimations": "Stime dei fornitori",
     "supplier-have-no-iban": "Il fornitore %supplier% non ha IBAN (conto bancario)",
+    "supplier-iban-changed": "Se ha cambiado el iban de la cuenta bancaria del proveedor %codproveedor%. Antes era %old% y ahora es %new%",
     "supplier-invoice": "Fattura del Fornitore",
     "supplier-invoice-deleted-successfully": "La fattura di acquisto 0 è stata cancellata correttamente.",
     "supplier-invoices": "Fatture Fornitori",
