--- a/Core/Translation/pl_PL.json
+++ b/Core/Translation/pl_PL.json
@@ -280,6 +280,7 @@
     "companies": "Firmy",
     "company": "Firma",
     "company-commission-info": "Będzie stosowane tylko do wybranej firmy",
+    "company-iban-changed": "Se ha cambiado el iban de la cuenta bancaria %account%. Antes era %old% y ahora es %new%",
     "company-manager": "Administrator firmy",
     "company-name": "Nazwa firmy",
     "company-tax": "Podatek dochodowy od osób prawnych",
@@ -1486,6 +1487,7 @@
     "supplier-estimation": "Szacowanie dostawcy",
     "supplier-estimations": "Kosztorysy dostawców",
     "supplier-have-no-iban": "Dostawca %%supplier nie posiada IBAN (numer konta bankowego)",
+    "supplier-iban-changed": "Se ha cambiado el iban de la cuenta bancaria del proveedor %codproveedor%. Antes era %old% y ahora es %new%",
     "supplier-invoice": "Faktura dostawcy",
     "supplier-invoice-deleted-successfully": "Faktura zakupu %docCode% została pomyślnie usunięta.",
     "supplier-invoices": "Faktury dostawców",
