--- a/Core/Translation/pt_PT.json
+++ b/Core/Translation/pt_PT.json
@@ -280,6 +280,7 @@
     "companies": "Empresas",
     "company": "Empresa",
     "company-commission-info": "Aplica-se apenas à empresa selecionada",
+    "company-iban-changed": "Se ha cambiado el iban de la cuenta bancaria %account%. Antes era %old% y ahora es %new%",
     "company-manager": "Gerente de empresa",
     "company-name": "Nome da empresa",
     "company-tax": "Imposto sobre o rendimento das pessoas coletivas",
@@ -1486,6 +1487,7 @@
     "supplier-estimation": "Orçamento do Fornecedor",
     "supplier-estimations": "Orçamentos do Fornecedor",
     "supplier-have-no-iban": "O fornecedor %%supplier não tem IBAN (conta bancária)",
+    "supplier-iban-changed": "Se ha cambiado el iban de la cuenta bancaria del proveedor %codproveedor%. Antes era %old% y ahora es %new%",
     "supplier-invoice": "Fatura de Fornecedor",
     "supplier-invoice-deleted-successfully": "Comprar fatura 0 excluída com sucesso.",
     "supplier-invoices": "Faturas de Fornecedor",
