--- a/Core/Translation/va_ES.json
+++ b/Core/Translation/va_ES.json
@@ -280,6 +280,7 @@
     "companies": "Empreses",
     "company": "Empresa",
     "company-commission-info": "Només s'aplicarà a l'empresa seleccionada",
+    "company-iban-changed": "Se ha cambiado el iban de la cuenta bancaria %account%. Antes era %old% y ahora es %new%",
     "company-manager": "Administrador de l'empresa",
     "company-name": "Nom de l'empresa",
     "company-tax": "Impost de societats",
@@ -1486,6 +1487,7 @@
     "supplier-estimation": "Presupost del proveïdor",
     "supplier-estimations": "Presuposts dels proveïdors",
     "supplier-have-no-iban": "El proveïdor %%supplier no té IBAN (compte bancària)",
+    "supplier-iban-changed": "Se ha cambiado el iban de la cuenta bancaria del proveedor %codproveedor%. Antes era %old% y ahora es %new%",
     "supplier-invoice": "Factura del proveïdor",
     "supplier-invoice-deleted-successfully": "La factura de compra %docCode% s'ha borrat correctament.",
     "supplier-invoices": "Factures dels Proveïdors",
