--- a/Core/Translation/ca_ES.json
+++ b/Core/Translation/ca_ES.json
@@ -280,6 +280,7 @@
     "companies": "Empreses",
     "company": "Empresa",
     "company-commission-info": "Només s'aplicarà a l'empresa seleccionada",
+    "company-iban-changed": "Se ha cambiado el iban de la cuenta bancaria %account%. Antes era %old% y ahora es %new%",
     "company-manager": "Administrador de l'empresa",
     "company-name": "Nom d'empresa",
     "company-tax": "Impost de societats",
@@ -1486,6 +1487,7 @@
     "supplier-estimation": "Pressupost de Proveïdor",
     "supplier-estimations": "Estimacions del proveïdor",
     "supplier-have-no-iban": "El proveïdor %%supplier no té IBAN (compte bancari)",
+    "supplier-iban-changed": "Se ha cambiado el iban de la cuenta bancaria del proveedor %codproveedor%. Antes era %old% y ahora es %new%",
     "supplier-invoice": "Factura de Proveïdor",
     "supplier-invoice-deleted-successfully": "S'ha eliminat correctament la factura de compra %docCode%.",
     "supplier-invoices": "Factures de proveïdor",
