--- a/Core/Translation/de_DE.json
+++ b/Core/Translation/de_DE.json
@@ -280,6 +280,7 @@
     "companies": "Firmen",
     "company": "Unternehmen",
     "company-commission-info": "Es wird nur für das ausgewählte Unternehmen angewendet",
+    "company-iban-changed": "Se ha cambiado el iban de la cuenta bancaria %account%. Antes era %old% y ahora es %new%",
     "company-manager": "Firmenleiter",
     "company-name": "Name der Firma",
     "company-tax": "Körperschaftsteuervorschriften",
@@ -1486,6 +1487,7 @@
     "supplier-estimation": "Lieferanten-Kostenvoranschlag",
     "supplier-estimations": "Lieferanten-Kostenvoranschläge",
     "supplier-have-no-iban": "Der Lieferant %%supplier hat keine IBAN (Bankkonto)",
+    "supplier-iban-changed": "Se ha cambiado el iban de la cuenta bancaria del proveedor %codproveedor%. Antes era %old% y ahora es %new%",
     "supplier-invoice": "Lieferantenrechnung",
     "supplier-invoice-deleted-successfully": "Kaufrechnung 0 wurde erfolgreich gelöscht.",
     "supplier-invoices": "Lieferantenrechnungen",
