--- a/Core/Translation/es_CO.json
+++ b/Core/Translation/es_CO.json
@@ -280,6 +280,7 @@
     "companies": "Empresas",
     "company": "Empresa",
     "company-commission-info": "Sólo se aplicará a la empresa seleccionada",
+    "company-iban-changed": "Se ha cambiado el iban de la cuenta bancaria %account%. Antes era %old% y ahora es %new%",
     "company-manager": "Administrador de la empresa",
     "company-name": "Nombre de empresa",
     "company-tax": "Impuesto de sociedades",
@@ -1486,6 +1487,7 @@
     "supplier-estimation": "Cotización de Proveedor",
     "supplier-estimations": "Cotizaciones de proveedores",
     "supplier-have-no-iban": "El proveedor %supplier% no tiene IBAN (cuenta bancaria)",
+    "supplier-iban-changed": "Se ha cambiado el iban de la cuenta bancaria del proveedor %codproveedor%. Antes era %old% y ahora es %new%",
     "supplier-invoice": "Factura de Proveedor",
     "supplier-invoice-deleted-successfully": "Factura de compra %docCode% ha sido eliminada correctamente.",
     "supplier-invoices": "Facturas de proveedores",
