--- a/Core/Translation/gl_ES.json
+++ b/Core/Translation/gl_ES.json
@@ -280,6 +280,7 @@
     "companies": "Empresas",
     "company": "Empresa",
     "company-commission-info": "Só se aplicará á empresa seleccionada",
+    "company-iban-changed": "Se ha cambiado el iban de la cuenta bancaria %account%. Antes era %old% y ahora es %new%",
     "company-manager": "Xerente de empresa",
     "company-name": "Nome da empresa",
     "company-tax": "Imposto de sociedades",
@@ -1486,6 +1487,7 @@
     "supplier-estimation": "Orzamento de provedor",
     "supplier-estimations": "Estimacións de provedores",
     "supplier-have-no-iban": "O provedor %supplier% non ten IBAN (conta bancaria)",
+    "supplier-iban-changed": "Se ha cambiado el iban de la cuenta bancaria del proveedor %codproveedor%. Antes era %old% y ahora es %new%",
     "supplier-invoice": "Factura de provedor",
     "supplier-invoice-deleted-successfully": "A factura de compra %docCode% foi eliminada con éxito.",
     "supplier-invoices": "Facturas do provedor",
