--- a/Core/Translation/pt_BR.json
+++ b/Core/Translation/pt_BR.json
@@ -280,6 +280,7 @@
     "companies": "Empresas",
     "company": "Empresa",
     "company-commission-info": "Informações de comissão da empresa",
+    "company-iban-changed": "Se ha cambiado el iban de la cuenta bancaria %account%. Antes era %old% y ahora es %new%",
     "company-manager": "Gerente da empresa",
     "company-name": "Nome da empresa",
     "company-tax": "Imposto de renda",
@@ -1486,6 +1487,7 @@
     "supplier-estimation": "Estimativa de Fornecedor",
     "supplier-estimations": "Estimativas de Fornecedor",
     "supplier-have-no-iban": "O fornecedor %%supplier não tem IBAN (conta bancária)",
+    "supplier-iban-changed": "Se ha cambiado el iban de la cuenta bancaria del proveedor %codproveedor%. Antes era %old% y ahora es %new%",
     "supplier-invoice": "Fatura de Fornecedor",
     "supplier-invoice-deleted-successfully": "Fatura de compra %docCode% excluída com sucesso.",
     "supplier-invoices": "Faturas de Fornecedor",
