Añadida cuenta especial de anticipos a proveedores.

--- a/Core/Data/Lang/EN/cuentasesp.csv
+++ b/Core/Data/Lang/EN/cuentasesp.csv
@@ -1,6 +1,7 @@
 codcuentaesp;descripcion
 "ACREED";"Accounts of creditors"
-"ANTCLI";"Anticipos de clientes"
+"ANTCLI";"Customer advances"
+"ANTPRO";"Supplier advances"
 "CAJA";"Cash accounts"
 "CAMNEG";"Negative exchange difference accounts"
 "CAMPOS";"Positive exchange differences accounts"
