--- a/Core/Data/Lang/eu_ES/cuentaesp.csv
+++ b/Core/Data/Lang/eu_ES/cuentaesp.csv
@@ -1,6 +1,7 @@
 codcuentaesp;descripcion
 "ACREED";"Hartzekodunen kontuak"
 "ANTCLI";"Anticipos de clientes"
+"ANTPRO";"Anticipos a proveedores"
 "CAJA";"Kutxa kontuak"
 "CAMNEG";"kanbio-diferentzia negatiboen kontuak"
 "CAMPOS";"kanbio-diferentzia positiboen kontuak"
