Añadido mensaje de aviso al cerrar ejercicio cuando faltan asientos.

--- a/Core/Translation/ca_ES.json
+++ b/Core/Translation/ca_ES.json
@@ -280,7 +280,7 @@
     "companies": "Empreses",
     "company": "Empresa",
     "company-commission-info": "Només s'aplicarà a l'empresa seleccionada",
-    "company-iban-changed": "Se ha cambiado el iban de la cuenta bancaria %account%. Antes era %old% y ahora es %new%",
+    "company-iban-changed": "S'ha canviat el IBAN del compte bancari %account%. Abans era %old% i ara és %new%",
     "company-manager": "Administrador de l'empresa",
     "company-name": "Nom d'empresa",
     "company-tax": "Impost de societats",
@@ -1331,6 +1331,7 @@
     "rules": "Regles",
     "run": "Executar",
     "running-plugin-cron": "S'està executant FacturaScripts cron per al connector %pluginName%",
+    "running-work-queue": "Executant la cua d'esdeveniments de treball",
     "sales": "Vendes",
     "sales-invoice": "Factura de venda",
     "sales-rate": "Taxa de vendes",
@@ -1487,7 +1488,7 @@
     "supplier-estimation": "Pressupost de Proveïdor",
     "supplier-estimations": "Estimacions del proveïdor",
     "supplier-have-no-iban": "El proveïdor %%supplier no té IBAN (compte bancari)",
-    "supplier-iban-changed": "Se ha cambiado el iban de la cuenta bancaria del proveedor %codproveedor%. Antes era %old% y ahora es %new%",
+    "supplier-iban-changed": "S'ha canviat el IBAN del compte bancari del proveïdor %codproveedor%. Abans era %old% i ara és %new%",
     "supplier-invoice": "Factura de Proveïdor",
     "supplier-invoice-deleted-successfully": "S'ha eliminat correctament la factura de compra %docCode%.",
     "supplier-invoices": "Factures de proveïdor",
@@ -1663,7 +1664,7 @@
     "warehouses": "Magatzems",
     "warning": "Atenció",
     "warnings": "Avisos",
-    "weak-password": "La contraseña debe tener al menos 8 caracteres, con números y letras.",
+    "weak-password": "La contrasenya ha de tenir almenys 8 caràcters, amb números i lletres.",
     "web": "Web",
     "website": "Lloc web",
     "wednesday": "Dimecres",
