--- a/Core/Translation/de_DE.json
+++ b/Core/Translation/de_DE.json
@@ -1331,6 +1331,7 @@
     "rules": "Regeln",
     "run": "Ausführen",
     "running-plugin-cron": "Führe FacturaScripts Cron für das Plugin %pluginName% aus",
+    "running-work-queue": "Ejecutando la cola de eventos de trabajo",
     "sales": "Der Umsatz",
     "sales-invoice": "Verkaufsrechnung",
     "sales-rate": "Verkaufsrate",
