--- a/Core/Translation/en_EN.json
+++ b/Core/Translation/en_EN.json
@@ -280,7 +280,7 @@
     "companies": "Companies",
     "company": "Company",
     "company-commission-info": "It will only apply to the selected company",
-    "company-iban-changed": "Se ha cambiado el iban de la cuenta bancaria %account%. Antes era %old% y ahora es %new%",
+    "company-iban-changed": "The IBAN of bank account %account% has been changed. It was %old% and now it is %new%.",
     "company-manager": "Company manager",
     "company-name": "Company name",
     "company-tax": "Corporate income tax",
@@ -1331,6 +1331,7 @@
     "rules": "Rules",
     "run": "Run",
     "running-plugin-cron": "Running FacturaScripts cron for plugin %pluginName%",
+    "running-work-queue": "Running the work event queue.",
     "sales": "Sales",
     "sales-invoice": "Factura de venta",
     "sales-rate": "Sales rate",
@@ -1487,7 +1488,7 @@
     "supplier-estimation": "Supplier estimation",
     "supplier-estimations": "Supplier estimations",
     "supplier-have-no-iban": "The supplier %%supplier has no IBAN (bank account)",
-    "supplier-iban-changed": "Se ha cambiado el iban de la cuenta bancaria del proveedor %codproveedor%. Antes era %old% y ahora es %new%",
+    "supplier-iban-changed": "The IBAN of the bank account of supplier %codproveedor% has been changed. It was %old% and now it is %new%.",
     "supplier-invoice": "Supplier invoice",
     "supplier-invoice-deleted-successfully": "Purchase invoice %docCode% deleted successfully.",
     "supplier-invoices": "Supplier invoices",
