--- a/Core/Translation/eu_ES.json
+++ b/Core/Translation/eu_ES.json
@@ -1331,6 +1331,7 @@
     "rules": "Arauak",
     "run": "Exekutatu",
     "running-plugin-cron": "FacturaScripts %pluginName% pluginaren cron exekutatzen",
+    "running-work-queue": "Ejecutando la cola de eventos de trabajo",
     "sales": "Salmentak",
     "sales-invoice": "Salmenta faktura",
     "sales-rate": "Salmenta-tasa",
@@ -1487,7 +1488,7 @@
     "supplier-estimation": "Hornitzaile aurrekontua",
     "supplier-estimations": "Hornitzaileen aurrekontuak",
     "supplier-have-no-iban": "Hornitzaileak %%iban-kontu bankurik ez du",
-    "supplier-iban-changed": "Se ha cambiado el iban de la cuenta bancaria del proveedor %codproveedor%. Antes era %old% y ahora es %new%",
+    "supplier-iban-changed": "Hornitzailearen %codproveedor% banku kontuaren iban-a aldatu da. Lehen %old% zen eta orain %new% da.",
     "supplier-invoice": "Hornitzaile faktura",
     "supplier-invoice-deleted-successfully": "%docCode% erosketa faktura ondo ezabatu da.",
     "supplier-invoices": "Hornitzaileen fakturak",
