--- a/Core/Translation/fr_FR.json
+++ b/Core/Translation/fr_FR.json
@@ -280,7 +280,7 @@
     "companies": "Entreprises",
     "company": "Compagnie",
     "company-commission-info": "Cela s'appliquera uniquement à l'entreprise sélectionnée",
-    "company-iban-changed": "Se ha cambiado el iban de la cuenta bancaria %account%. Antes era %old% y ahora es %new%",
+    "company-iban-changed": "L'IBAN du compte bancaire %account% a été changé. Avant, c'était %old% et maintenant c'est %new%",
     "company-manager": "Chef d'entreprise",
     "company-name": "Nom de la compagnie",
     "company-tax": "Fiscalité des entreprises",
@@ -1331,6 +1331,7 @@
     "rules": "Règles",
     "run": "Exécuter",
     "running-plugin-cron": "Exécution de la tâche programmée pour le module %pluginName%",
+    "running-work-queue": "Exécution de la file d'attente des événements de travail",
     "sales": "Ventes",
     "sales-invoice": "Facture de vente",
     "sales-rate": "Taux de vente",
@@ -1487,7 +1488,7 @@
     "supplier-estimation": "Devis fournisseur",
     "supplier-estimations": "Budgets des fournisseurs",
     "supplier-have-no-iban": "Le fournisseur %supplier% n'a pas d'IBAN (compte bancaire)",
-    "supplier-iban-changed": "Se ha cambiado el iban de la cuenta bancaria del proveedor %codproveedor%. Antes era %old% y ahora es %new%",
+    "supplier-iban-changed": "L'IBAN du compte bancaire du fournisseur %codproveedor% a été changé. Avant, c'était %old% et maintenant c'est %new%",
     "supplier-invoice": "Facture fournisseur",
     "supplier-invoice-deleted-successfully": "La facture d'achat %docCode% a été supprimée avec succès.",
     "supplier-invoices": "Factures fournisseurs",
@@ -1663,7 +1664,7 @@
     "warehouses": "Entrepôts",
     "warning": "Avertissement",
     "warnings": "Avis",
-    "weak-password": "La contraseña debe tener al menos 8 caracteres, con números y letras.",
+    "weak-password": "Le mot de passe doit comporter au moins 8 caractères, avec des chiffres et des lettres.",
     "web": "Web",
     "website": "Site Internet",
     "wednesday": "Mercredi",
