--- a/Core/Translation/gl_ES.json
+++ b/Core/Translation/gl_ES.json
@@ -280,7 +280,7 @@
     "companies": "Empresas",
     "company": "Empresa",
     "company-commission-info": "Só se aplicará á empresa seleccionada",
-    "company-iban-changed": "Se ha cambiado el iban de la cuenta bancaria %account%. Antes era %old% y ahora es %new%",
+    "company-iban-changed": "Cambióse o iban da conta bancaria %account%. Antes era %old% e agora é %new%",
     "company-manager": "Xerente de empresa",
     "company-name": "Nome da empresa",
     "company-tax": "Imposto de sociedades",
@@ -1331,6 +1331,7 @@
     "rules": "Reglas",
     "run": "Executar",
     "running-plugin-cron": "Executando cron do plugin %pluginName%",
+    "running-work-queue": "Executando a cola de eventos de traballo",
     "sales": "Vendas",
     "sales-invoice": "Factura de venda",
     "sales-rate": "Taxa de vendas",
