--- a/Core/Translation/it_IT.json
+++ b/Core/Translation/it_IT.json
@@ -1331,6 +1331,7 @@
     "rules": "Regole",
     "run": "eseguire",
     "running-plugin-cron": "Esecuzione del cron del plugin %pluginName%",
+    "running-work-queue": "Ejecutando la cola de eventos de trabajo",
     "sales": "I saldi",
     "sales-invoice": "Fattura di vendita",
     "sales-rate": "Tasso di vendita",
@@ -1487,7 +1488,7 @@
     "supplier-estimation": "Stima fornitore",
     "supplier-estimations": "Stime dei fornitori",
     "supplier-have-no-iban": "Il fornitore %supplier% non ha IBAN (conto bancario)",
-    "supplier-iban-changed": "Se ha cambiado el iban de la cuenta bancaria del proveedor %codproveedor%. Antes era %old% y ahora es %new%",
+    "supplier-iban-changed": "È stato cambiato l'iban del conto bancario del fornitore %codproveedor%. Prima era %old% e ora è %new%",
     "supplier-invoice": "Fattura del Fornitore",
     "supplier-invoice-deleted-successfully": "La fattura di acquisto 0 è stata cancellata correttamente.",
     "supplier-invoices": "Fatture Fornitori",
@@ -1663,7 +1664,7 @@
     "warehouses": "magazzini",
     "warning": "Attenzione",
     "warnings": "Avvisi",
-    "weak-password": "La contraseña debe tener al menos 8 caracteres, con números y letras.",
+    "weak-password": "La password deve contenere almeno 8 caratteri, con numeri e lettere.",
     "web": "web:",
     "website": "Sito web",
     "wednesday": "Mercoledì",
