--- a/Core/Translation/pl_PL.json
+++ b/Core/Translation/pl_PL.json
@@ -1331,6 +1331,7 @@
     "rules": "Zasady",
     "run": "Uruchom",
     "running-plugin-cron": "Uruchamianie cron wtyczki %pluginName%",
+    "running-work-queue": "Ejecutando la cola de eventos de trabajo",
     "sales": "Sprzedaż",
     "sales-invoice": "Faktura sprzedaży",
     "sales-rate": "Wskaźnik sprzedaży",
