--- a/Core/Translation/va_ES.json
+++ b/Core/Translation/va_ES.json
@@ -280,7 +280,7 @@
     "companies": "Empreses",
     "company": "Empresa",
     "company-commission-info": "Només s'aplicarà a l'empresa seleccionada",
-    "company-iban-changed": "Se ha cambiado el iban de la cuenta bancaria %account%. Antes era %old% y ahora es %new%",
+    "company-iban-changed": "S'ha canviat l'iban del compte bancari %account%. Abans era %old% i ara és %new%",
     "company-manager": "Administrador de l'empresa",
     "company-name": "Nom de l'empresa",
     "company-tax": "Impost de societats",
@@ -1331,6 +1331,7 @@
     "rules": "Regles",
     "run": "run",
     "running-plugin-cron": "S'està eixecutant el cron del plugin %pluginName%",
+    "running-work-queue": "Ejecutando la cola de eventos de trabajo",
     "sales": "Vendes",
     "sales-invoice": "Factura de venda",
     "sales-rate": "Taxa de vendes",
@@ -1487,7 +1488,7 @@
     "supplier-estimation": "Presupost del proveïdor",
     "supplier-estimations": "Presuposts dels proveïdors",
     "supplier-have-no-iban": "El proveïdor %%supplier no té IBAN (compte bancària)",
-    "supplier-iban-changed": "Se ha cambiado el iban de la cuenta bancaria del proveedor %codproveedor%. Antes era %old% y ahora es %new%",
+    "supplier-iban-changed": "S'ha canviat l'iban del compte bancari del proveïdor %codproveedor%. Abans era %old% i ara és %new%",
     "supplier-invoice": "Factura del proveïdor",
     "supplier-invoice-deleted-successfully": "La factura de compra %docCode% s'ha borrat correctament.",
     "supplier-invoices": "Factures dels Proveïdors",
