--- a/Core/Translation/cs_CZ.json
+++ b/Core/Translation/cs_CZ.json
@@ -280,7 +280,7 @@
     "companies": "Empresas",
     "company": "Empresa",
     "company-commission-info": "Sólo se aplicará a la empresa seleccionada",
-    "company-iban-changed": "Se ha cambiado el iban de la cuenta bancaria %account%. Antes era %old% y ahora es %new%",
+    "company-iban-changed": "Byl změněn IBAN bankovního účtu %account%. Předtím bylo %old% a nyní je %new%",
     "company-manager": "Administrador de la empresa",
     "company-name": "Nombre de empresa",
     "company-tax": "Daň z příjmů právnických osob",
@@ -1331,6 +1331,7 @@
     "rules": "Reglas",
     "run": "Ejecutar",
     "running-plugin-cron": "Ejecutando cron del plugin %pluginName%",
+    "running-work-queue": "Ejecutando la cola de eventos de trabajo",
     "sales": "Ventas",
     "sales-invoice": "Factura de venta",
     "sales-rate": "Tasa de ventas",
